Store missed delta timestamps in the log

Currently missed delta timestamps are being ignored. This fixes
that by adding them to the PB. This is step towards KUDU-139 but
missed delta application order is tricky and is not enforced here.
This also updates the clock with the missed delta timestamps.

Change-Id: I9b17e77069b9b29113ed2b8c5fa1dea37af66d32
Reviewed-on: http://gerrit.ent.cloudera.com:8080/1700
Tested-by: jenkins
Reviewed-by: Todd Lipcon <todd@cloudera.com>