src/tablet/transactions/write_transaction.h
@@ -107,18 +107,7 @@ class WriteTransactionContext : public TransactionContext {
   Status AddMissedMutation(const Timestamp& timestamp,
                            gscoped_ptr<RowwiseRowBlockPB> row_key,
                            const RowChangeList& changelist,
-                           gscoped_ptr<MutationResultPB> result) {
-    result->set_type(MutationType(result.get()));
-    TxOperationPB* mutation = result_pb_.add_mutations();
-    mutation->set_type(TxOperationPB::MUTATE);
-    mutation->set_allocated_mutation_result(result.release());
-    MissedDeltaMutationPB* missed_delta_mutation = mutation
-        ->mutable_missed_delta_mutation();
-    missed_delta_mutation->set_allocated_row_key(row_key.release());
-    missed_delta_mutation->set_changelist(changelist.slice().data(),
-                                          changelist.slice().size());
-    return Status::OK();
-  }
+                           gscoped_ptr<MutationResultPB> result);
 
   // Adds a failed mutation to this TransactionContext, including the status
   // explaining why it failed.
